Initial failed attempt to bump AWS libs
Signed-off-by: rtweed <RichardoC@users.noreply.github.com>

--- a/quickwit/Cargo.toml
+++ b/quickwit/Cargo.toml
@@ -227,17 +227,17 @@ whichlang = { git = "https://github.com/quickwit-oss/whichlang", rev = "fe406416
 wiremock = "0.5"
 zstd = "0.13.0"
 
-aws-config = "0.55.0"
-aws-credential-types = { version = "0.55.0", features = [
+aws-config = "1.1.0"
+aws-credential-types = { version = "1.1.1", features = [
   "hardcoded-credentials",
 ] }
-aws-sdk-kinesis = "0.28.0"
-aws-sdk-s3 = "0.28.0"
-aws-smithy-async = "0.55.0"
-aws-smithy-client = "0.55.0"
-aws-smithy-http = "0.55.0"
-aws-smithy-types = "0.55.0"
-aws-types = "0.55.0"
+aws-sdk-kinesis = "1.1.1"
+aws-sdk-s3 = "1.1.1"
+aws-types = "1.1.1"
+aws-smithy-async = "1.1.2"
+aws-smithy-client = { version = "0.55.0", features = ["client-hyper"] } # should be removed as deprecated upstream
+aws-smithy-http = "0.60.2"
+aws-smithy-types = "1.1.2"
 
 azure_core = { version = "0.13.0", features = ["enable_reqwest_rustls"] }
 azure_storage = { version = "0.13.0", default-features = false, features = [
